n/a - April 27, 2004

	* Tagged as 2.0.4

n/a - April 24, 2004

	* Added a example script for /etc/sysconfig/createfiles
	* Added a check for /sys before mounting sysfs
	* Added -t noramfs to umount on /etc/rc.d/init.d/mountfs.
	  This will prevent /dev from being unmounted, if /proc/mounts
	  is symlinked to /etc/mtab

n/a - April 18, 2004

	* Small fix to a if statement in netfs

n/a - April 17, 2004

	* Added the lisa bootscript, lisa is part of the KDE Network package
	* Add proper error checking to the mountfs script when writing out mtab
	* Add more comments to the udev script, and conditionalize various
	  things that should've been done this way in the first place
	* Include a template module auto-loading configuration file instead of
	  having syntax comments in the script itself

n/a - April 12, 2004

	* Added a automatic modules loading script to the contrib directory
	  submitted by Zack
	* Edited mountkernfs, so that if you can mount sysfs on /sys, it will
	  be mounted at boottime.  Should not affect 2.4 systems
	* Since all entries are added to /etc/mtab, we should not require
	  the NO_FS variable.  It has been removed from mountfs
	* Added the udev script into the contrib directory, submitted by Zack

2.0.3 - April 8, 2004

	* Updated cleanfs, so it can create devices.  Supplied by Zack
	* Tagged as 2.0.3

n/a - March 31, 2004

	* Changed "Press Enter" on unknown error to white
	* Moved S10swap to S20swap.  When udev is added, it has to be
	  ran before swap is setup

n/a - March 29, 2004

	* Fixed the rc5.d symlink for ntp so it creates S26ntp instead
	  of S26npt
	* Moved S20mountkernfs to S00mountkernfs in rcsysinit.d.  Will help in
	  the addition of udev in the future.

n/a - March 27, 2004

	* Changed gdm path from hardcoded to program name.  There are 2 spots
	  gnome can be installed

n/a - March 26, 2004

	* Updated fam daemon script.  It now uses the famd daemon instead of fam

n/a - March 24, 2004
